--- a/DodgeBall/joinlobbydialog.ui
+++ b/DodgeBall/joinlobbydialog.ui
@@ -79,6 +79,9 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
+    <widget class="QLineEdit" name="testEdit"/>
+   </item>
+   <item>
     <widget class="QLabel" name="label_3">
      <property name="palette">
       <palette>
