--- a/DodgeBall/pixmaps.qrc
+++ b/DodgeBall/pixmaps.qrc
@@ -1,3 +1,6 @@
 <RCC>
-    <qresource prefix="/"/>
+    <qresource prefix="/:">
+        <file>pixmaps/Blue.png</file>
+        <file>pixmaps/Red.png</file>
+    </qresource>
 </RCC>
